--- a/md.tex
+++ b/md.tex
@@ -1,165 +1,189 @@
 \section{Molekulardynamik}
 \label{md}
 
-Molekulardynamik (MD) ist im Gegensatz zu quantenmechanischen Methoden eine klassische atomistische Methode, die zwar ungenauere Ergebnisse liefert, jedoch größere Systeme von bis zu einer Million Atome in akzeptabler Zeit rechnen kann.
-Damit wird sie seit vielen Jahren erfolgreich in Physik, Chemie sowie in Materialwissenschaften genutzt, um System-, Molekül- und Materialeigenschaften zu bestimmen und Rückschlüsse auf reale Prozesse zu führen.
-Somit existiert es eine Vielzahl gut erforschter Systeme, auf die im Rahmen dieser Arbeit aufgebaut wird.
+Ursprünglich mit dem Ziel der klassischen Simulation idealer Gase entwickelt, wurde die Molekulardynamik seither um die Fähigkeit zur Simulation von Festkörpern, organischen Molekülen und Reaktionen erweitert.
+Dadurch findet sie Anwendung in Simulationen von Materialien und chemischen Stoffen bei beliebigen Temperaturen und Drücken, um deren Verhalten vorhersagen und auf reale Prozesse zurückführen zu können.
+
+Nachfolgend möchte ich einen kurzen Überblick über die Formulierung molekulardynamischer Methoden geben (Abschnitt \ref{mdformulation}) und im Anschluss auf die Unterschiede und Möglichkeiten der Kraftfelder eingehen (Abschnitt \ref{mdforcefields}).
 
 \subsection{Formulierung}
+\label{mdformulation}
 
-\subsubsection{Allgemeines}
+Molekulardynamik ist eine klassische Vielteilchenmethode, die jedem Teilchen des Systemes \todo{wieso $R$?}$R$ eine Masse $m$, eine Position $\vec r$, einen Impuls $\vec p$ und Kräfte entsprechend eines lokalen Kraftfeldes $\vec{F}(R)$ oder eventuellen Randbedingungen zuweist.
+Entsprechend der Born-Oppenheimer-Näherung, nach der die Elektronen eines chemischen Systemes an ihre Atomkerne gebunden sind und schnell genug auf Änderungen des Systemes reagieren, genügt es, die Atome als Punktmassen an der Position ihres Atomkernes zu betrachten.
+Elektronische und sonstige Interaktionen werden dann durch die verwendeten Kraftfelder beschrieben, die ihrerseits Annäherungen vornehmen können, um die Simulationszeit auf Kosten der Genauigkeit zu verringern.
 
-Als klassische Methode arbeitet Molekulardynamik mit Kraftfeldern, Massen.
-So besteht ein System aus einer Vielzahl an Teilchen, die als Punktmasse angenähert werden, sowie einer universellen Zeit $t$.
-Jedes Teilchen vereint also die Eigenschaften seiner Masse $m$, seines Impulses $\vec p$ und seiner Position $\vec r$.
-Zusätzlich wirkt auf jedes Teilchen ein Kraftfeld $F(R)$ mit $R$ als aktuellem Systemzustand.
+Der Systemzustand wird dann entweder entsprechend des gewählten Ensembles zeitlich integriert, oder hinsichtlich der Energie des Gesamt- oder eines Teilsystemes optimiert.
+Dazu stehen Integratoren für das Mikrokanonischen Ensemble (NVE), das Kanonischen Ensemble (NVT) und das Großkanonischen Ensemble (NPT) ebenso zur Verfügung wie verschiedene Optimierungsmethoden, von denen hier die Konjugierte Gradienten-Methode vorgestellt werden soll.
 
 \subsubsection{Mikrokanonisches Ensemble (NVE)}
 
-Es gilt für jedes Teilchen:
+Diese grundlegende Ensembleformulierung betrachtet die drei Größen Teilchenzahl $N$, Volumen $V$ und Systemenergie $E$ als zeitinvariant, um so vollkommen geschlossene Systeme zu untersuchen.
 
 \begin{equation}
-  \dot{\vec r} = {\vec p \over m}
+  N = \text{const.}
+  \qquad
+  V = \text{const.}
+  \qquad
+  E = \text{const.}
+\end{equation}
+
+Daraus ergibt ergeben sich die Bewegungsgleichungen für jedes Teilchen $i$, welche anschließend durch eine numerische Integrationsmethode, etwa dem Velocity-Verlet-Algorithmus, zeitlich integriert werden.
+
+\begin{equation}
+  \dot{\vec r_i} = {\vec p_i \over m_i}
 \end{equation}
 
 \begin{equation}
-  \dot{\vec p} = m \vec a = F(R)
+  \dot{\vec p_i} = m \vec a_i = \vec F_i(R)
 \end{equation}
-
-\todo{Globale Formulierung!}
-
-Zentral ist also das Kraftfeld $F(R)$, welches auf unterschiedliche Arten
 
 \subsubsection{Kanonisches Ensemble (NVT)}
 
-Gegenüber dem mikrokanonischen Ensemble kommt im Kanonischen Ensemble noch ein Thermostat hinzu.
-Dieses gleicht die mittlere Temperatur des Systemes an einen vorgegebenen Wert an.
-Dies kann über harte Reskalierung der Partikelgeschwindigkeiten (Berendsen-Thermostat), durch zufällige Stöße mit virtuellen Teilchen (Anderson-Thermostat) geschehen, oder durch einen zusätzlichen Reibungsterm, der auch negative Reibungskoeffizienten zulässt (Nosé-\-Hoover-\-Thermostat).
-
-Unter Benutzung des \textbf{Berendsen-Thermostates} werden jeden Zeitschritt die Geschwindigkeiten aller Teilchen so skaliert, dass die Temperatur, die sich aus der kinetischen Energie über die Maxwell-Boltzmann-Verteilung für Gase ergibt, auf dem Zielwert gehalten wird:
+Aufbauend auf dem mikrokanonischen Ensemble tauscht das kanonische Ensemble zusätzlich Energie mit einem Wärmebad aus, so dass nicht mehr die Energie des Systems, sondern seine mittlere Temperatur $T$ konstant bleibt.
 
 \begin{equation}
-  \overline{E_{kin}} = {1\over2} m\overline{v^2} = {d\over2}k_BT
+  N = \text{const.}
+  \qquad
+  V = \text{const.}
+  \qquad
+  T = \text{const.}
 \end{equation}
 
-%% \begin{equation}
-%% T = {m \overline{v^2} \over k_B d}
-%% \end{equation}
+Numerisch wird diese zusätzliche Randbedingung durch ein Thermostat ermöglicht, das die Teilchenenergien beeinflusst und so für eine Korrektur der mittleren Systemtemperatur in Richtung der Temperatur des Wärmebades sorgt.
 
-Da dabei eine feste Temperatur erzwungen wird, ergibt dieses Thermostat kein kanonisches Ensemble, ist jedoch für große Systeme eine gute Näherung, die effizient berechnet werden kann.
+Ein naives Thermostat skalierte also in jedem Zeitschritt die Teilchengeschwindigkeiten entsprechend der Maxwell-Boltzmann-Verteilung auf den Vorgabewert $T_\text{Ziel}$ (Gleichung \ref{eq:ekanonisch}), wodurch zwar die korrekte Temperatur erzeugt wird, aber die Ensembleeigenschaften wie Ergodizität verletzt werden.
+So werden \todo{Fluktuationen der Temperatur}Systemzustände verhindert, die eine geringere oder höhere Temperatur aufweisen und als Übergänge zu anderen Systemzuständen dienen können, wodurch das System in einem lokalen Energieminimum gefangen sein kann.
 
-Das \textbf{Anderson-Thermostat} hingegen arbeitet näher an der Idee des kanonischen Ensembles, über die Systemgrenzen hinweg Energie und somit Temperatur durch Teilchenstöße auszutauschen.
-Dabei wird für die Zahl der Stöße pro Zeitschritt eine Poissonverteilung angenommen, Masse und Geschwindigkeiten der virtuellen Atome entsprechen der Zieltemperatur.
-Zwar hat diese Vorgehensweise den Vorteil, mit einer geringen Anzahl an äußeren Einflüssen die Temperatur konstant zu halten, jedoch eignet es sich nur für die Betrachtung zeitgemittelter Größen.
-Durch die Manipulation einzelner, zufälliger Atome können Trajektorien, insbesondere Abscheidungsorte und -konfigurationen stark beeinflusst werden.
+\begin{equation}
+  %% \overline{E_{kin}} = \frac{1}{2} \overline{m v^2} = \frac{d}{2} k_B T
+  \overline{E_{kin}} = \frac{1}{2} \overline{m v^2} = \frac{d}{2} k_B T
+  \label{eq:ekanonisch}
+\end{equation}
 
-Als Alternative eignet sich das \textbf{Nosé-Hoover-Thermostat}.
-Dieses fügt dem Gesamtsystem einen zusätzlichen Freiheitsgrad $s$ hinzu, der die Temperatur beeinflusst.
-Auf jedes Atom $i$ wirkt somit eine zusätzliche Reibungskraft entlang des Impulses:
+Eine Anpassung bietet das \textbf{Berendsen-Thermostat}, welches ebenfalls mit einer Reskalierung der Teilchengeschwindigkeiten arbeitet, aber für eine exponentielle Annäherung an die Zieltemperatur $T_\text{Ziel}$ sorgt, indem in jedem Zeitschritt nur ein Teil der Differenz in Abhängigkeit der Dämpfungszeit $\tau$ angeglichen wird (Gleichung \ref{eq:berendsen}).
+Dabei werden ebenfalls die Fluktuationen in der Systemtemperatur unterbunden, doch zeigt sich für große Systeme eine gute Annäherung an das kanonische Ensemble bei vertretbarem Verbrauch von Rechenzeit.
+
+\begin{equation}
+  \vec v_i' = \vec v_i \cdot \sqrt{1 + \frac{\Delta t}{\tau} \left(\frac{T_\text{Ziel}}{T} - 1\right)}
+  \label{eq:berendsen}
+\end{equation}
+
+Für kleine Systeme müssen jedoch Methoden benutzt werden, die das kanonische Ensemble bewahren.
+Das \textbf{Andersen-Thermostat} beispielsweise tauscht über die Systemgrenzen hinweg Energie in Form von poissonverteilten Stößen mit virtuellen Teilchen aus und bewahrt so die Temperatur des Systems.
+Zwar hat diese Vorgehensweise den Vorteil, mit einer geringen Anzahl an äußeren Einflüssen die Temperatur konstant zu halten, jedoch eignet es sich nur für die Betrachtung zeitgemittelter Größen, da lokale Energieeinträge in das System die Trajektorien einzelner Teilchen massiv stören können.
+In Zusammenhang mit der Untersuchung dynamischer Eigenschaften ist dieses Thermostat daher nicht zu empfehlen und sollte nur bei ausreichend großen Systemen Anwendung finden.
+
+Die beste Alternative für kleine Systeme ist das \textbf{Nosé-Hoover-Thermostat}, das dem System einen zusätzlichen Freiheitsgrad $s$ hinzufügt, über den die Temperatur des Systems beeinflusst werden kann.
+Der Einfluss auf die Teilchenenergien äußert sich in der Einführung einer zusätzlichen Reibungskraft entlang des Impules jedes Teilchens:
 
 \begin{equation}
   \dot{\vec p_i} = \vec{F_i} - s \vec{p_i}
 \end{equation}
 
-Der Reibungskoeffizient $s$ ändert sich dabei in Abhängigkeit vom System und kann dabei auch negative Werte annehmen:
+Der Reibungskoeffizient $s$ ändert sich dabei in Abhängigkeit der Systemtemperatur, wobei er auch negative Werte annehmen und so Teilchen entlang ihrer Bewegungsrichtung beschleunigen kann.
+Auch bei diesem Thermostat fungiert der Zeitfaktor $\tau$ als Stellgröße für die Reaktionsgeschwindigkeit des Thermostates.
 
 \begin{equation}
   \dot s = {\tau \over M} \sum_i{{p_i^2 \over 2m_i} - {Nd \over k_BT}}
 \end{equation}
+\todo[inline]{Was ist M?}
 
-\todo{tau hin oder weg?}
-
-Damit fluktuiert die Temperatur um den Zielwert, wird also nicht fest erzwungen und folgt somit dem kanonischen Ensemble, wobei $\tau$ die Zeitskala angibt, auf der das System ins thermische Gleichgewicht übergeht.
-In vielen Softwarepaketen für Molekulardynamiksimulationen dient das Nosé-Hoover-Thermostat als Standardthermostat.
+Durch die Bewahrung der Eigenschaften des kanonischen Ensembles hat sich das Nosé-Hoover-Thermostat als Standard-Thermostat in der Molekulardynamik durchgesetzt.
 
 \subsubsection{Großkanonisches Ensemble (NPT)}
 
-Zusätzlich zu einem Thermostat kommt im großkanonischen Ensemble ein Barostat zum Einsatz.
-Dieses reguliert über Reskalierung des Simulationsraumes unter periodischen Randbedingungen den mittleren Druck des Systemes.
-Dadurch lassen sich periodische Strukturen wie Kristalle frei relaxieren, ohne ihnen eine feste Dichte aufzuzwingen.
-Andererseits lassen sich auch Systeme unter großen Drücken untersuchen.
-
-Die Methoden des Barostats gleichen dem des Thermostats, wobei hier nicht die einzelnen Atome, sondern deren relativer Abstand zu einander durch Skalierung der Hauptachsen manipuliert wird.
-Als Voreinstellung kommt üblicherweise wieder ein Nosé-Hoover-Barostat zum Einsatz, wobei aufgrund seiner Einfachheit auch Berendsen-Barostate genutzt werden.
-Der Druck wird dabei über die Virialgleichung \todo{für ideale Gase?} ermittelt:
+Wird zusätzlich noch Verformungsenergie vom System verrichtet, spricht man vom Großkanonischen Ensemble, für das statt des Volumens der mittlere Druck des Systems konstant bleibt.
 
 \begin{equation}
-  PV = Nk_BT + \frac{1}{d} \sum_{i=1}^N{\vec{r}_i \cdot \vec{F}_i}
+  N = \text{const.}
+  \qquad
+  p = \text{const.}
+  \qquad
+  T = \text{const.}
+\end{equation}
+
+Dies wird durch ein Barostat realisiert, das durch Skalierung des Simulationsraumes den mittleren Druck ähnlich zu den oben vorgestellten Thermostaten beeinflusst, sodass sich als Standard Nosé-Hoover-Barostate etabliert haben, gelegentlich aber auch Berendsen-Barostate verwendet werden.
+Der Druck innerhalb des Systems wird dabei über die Virialgleichung ermittelt, die eigentlich für Gase gilt, \todo{Details?}aber auch für Flüssigkeiten und Feststoffe Systeme gute Ergebnisse liefert.
+
+\begin{equation}
+  PV = N k_B T + \frac{1}{d} \sum_{i=1}^N{\vec{r}_i \cdot \vec{F}_i}
 \end{equation}
 
 \subsubsection{Minimierung durch Konjugierte Gradienten (CG-Minimierung)}
+
+Möchte man mit molekulardynamischen Methoden Strukturen optimieren, greift man häufig auf Algorithmen zur Energieminimierungen zurück, wie der populären Konjugierte-Gradienten-Methode (CG, Conjugated Gradients), mit denen im Idealfall das globale Minimum der Systemenergie gesucht wird.
+Dabei läuft man den Systemzustand von einem Startpunkt $\vec X_0$ aus entlang des Gradienten der Energie $\nabla E(X)$ in Richtung des Minimums ab, kann aber über die Schrittweite $\alpha$ Einfluss auf die Qualität und Geschwindigkeit der Suche nehmen.
 
 \begin{figure}
   \centering
   \def\svgwidth{0.5\textwidth}
   \input{img/cg-gradient.pdf_tex}
   \caption[CG-Methode]{Klassische Minimierung durch konjugierte Gradienten:\\
-    a) Optimale Schrittlänge\\
-    b) Kleine Schrittlänge $\Rightarrow$ viele unnötige Schritte\\
-    c) Große Schrittlänge $\Rightarrow$ langsames Konvergenzverhalten
+    a) Optimale Schrittweite\\
+    b) Kleine Schrittweite $\Rightarrow$ viele unnötige Schritte\\
+    c) Große Schrittweite $\Rightarrow$ langsames Konvergenzverhalten
   }
   \label{fig:cg-gradient}
 \end{figure}
 
-Zur Energieminimierung, welche der Strukturoptimierung dient, wird häufig die \textbf{Methode der konjugierten Gradienten} angewandt.
-Man sucht dabei in der grundlegenden Variante ausgehend von einem beliebigen Startpunkt $\vec x_0$ das Minimum der im Suchbereich stetigen Funktion $f(\vec x)$ durch schrittweise Annäherung entlang des Gradienten:
+\begin{equation}
+  \vec X_i = \vec X_{i-1} - \alpha \nabla E(\vec X_{i-1})
+\end{equation}
 
-\begin{gather}
-  \vec s_i = \Delta\vec x_i = \nabla f(\vec x_{i-1})\\
-  \vec x_i = \vec x_{i-1} - \alpha \vec s_i
-\end{gather}
+Als Abbruchkriterien stehen je nach Verhalten des Systems währen der Optimierung die Differenz zwischen zwei Schritten ($\left|\vec X_i - \vec X_{i-1}\right| < X_\text{tol}$), die maximale Änderung eines Vektorelementes ($\max_k{\left|X_{i,k} - X_{i-1,k}\right|} < X_\text{tol}$), die Stärke des Gradienten ($\left|\nabla E(\vec X_{i-1})\right| < E_\text{tol}$), eine Anzahl an Zeitschritten ($i > i_\text{tol}$) oder eine Kombination daraus zur Verfügung.
 
-Der zusätzliche Parameter $\alpha$ legt dabei die Schrittweite fest.
-Mögliche Abbruchkriterien können dabei die Differenz zwischen zwei Schritten ($\left|\vec x_i - \vec x_{i-1}\right| < x_\text{tol}$), die maximale Änderung eines Vektorelementes ($\max_k{\left|x_{i,k} - x_{i-1,k}\right|} < x_\text{tol}$), die Stärke des Gradienten ($\left|\nabla f(\vec x_{i-1})\right| < x_\text{tol}$), eine Anzahl an Zeitschritten ($i > i_\text{tol}$) oder eine Kombination daraus sein.
-
-Dieser grundlegende Algorithmus stößt schnell an seine Grenzen, wenn man allgemeine, nichtlineare Funktionen minimieren möchte.
-Dafür führt man mehrere Änderungen ein:
-Einerseits ersetzt man den Sprung durch eine Minimierung entlang der Schrittrichtung (Gleichungen \ref{eq:cg-linesearch1} und \ref{eq:cg-linesearch2}).
-Andererseits ändert man die Schrittrichtung in Abhängigkeit vorheriger Schritte leicht ab (Gleichungen \ref{eq:pr1} und \ref{eq:pr2}).
-Hier wird die Polak-Ribière-Variante vorgestellt1, die standardmäßig in LAMMPS zum Einsatz kommt, jedoch existieren weitere gleichwertige Methoden.
+Eine Optimierung durch minimierte Gradienten ist für eine Große Zahl an Freiheitsgraden zwar schnell, stößt aber an seine Grenzen, wenn man allgemeine, nichtlineare Funktionen minimieren möchte, weshalb Variationen des CG-Algorithmus' entwickelt wurden.
+Einerseits kann man den Optimierungsschritt durch eine Minimierung entlang der Schrittrichtung (Gleichungen \ref{eq:cg-linesearch1} und \ref{eq:cg-linesearch2}) ersetzen, andererseits steht die Manipulation der Schrittrichtung in Abhängigkeit vorheriger Schritte zur Verfügung (Gleichung \ref{eq:pr1}).
+In LAMMPS wird die Polak-Ribière-Variante genutzt (Gleichungen \ref{eq:pr1} und \ref{eq:pr2}), doch existieren \todo{wofür?}verschiedene gleichwertige Methoden mit anderen Zielsetzungen und Formulierungen.
+Diese Anpassungen verbessern einerseits das erwartete Konvergenzverhalten, andererseits stabilisieren sie den Optimierungsalgorithmus gegenüber Nichtlinearitäten und Unstetigkeiten.
 
 \begin{gather}
   \label{eq:cg-linesearch1}
-  \min_\alpha f(x_i+\alpha \vec s_i) \rightarrow \alpha_i \\
+  \min_\alpha f(X_i+\alpha \vec s_i) \rightarrow \alpha_i \\
   \label{eq:cg-linesearch2}
-  \vec x_i = \vec x_{i-1} - \alpha_i \vec s_i\\
-  \label{eq:pr1}
-  \vec s_i = \Delta \vec x_i + \beta_i \vec s_{i-1}\\
+  \vec X_i = \vec X_{i-1} - \alpha_i \vec s_i\\
 \end{gather}
 \begin{equation}
+  \label{eq:pr1}
+  \vec s_i = \Delta \vec X_i + \beta_i \vec s_{i-1}
+\end{equation}
+\begin{equation}
   \label{eq:pr2}
-  \beta_i = \max \left(0, \frac{\Delta \vec x_i \cdot \left(\Delta \vec x_i - \Delta \vec x_{i-1}\right)}{\Delta \vec x_{i-1} \cdot \Delta \vec x_{i-1}}\right) \text{ (Polak-Ribière)}
+  \beta_i = \max \left(0, \frac{\Delta \vec X_i \cdot \left(\Delta \vec X_i - \Delta \vec X_{i-1}\right)}{\Delta \vec X_{i-1} \cdot \Delta \vec X_{i-1}}\right) \text{~(Polak-Ribière)}
 \end{equation}
 
-Diese Anpassungen verbessern einerseits das erwartete Konvergenzverhalten, andererseits stabilisieren sie den Optimierungsalgorithmus gegenüber Nichtlinearitäten und Unstetigkeiten\todo{Referenz? Lüge?}.
+%% \subsubsection{Weitere Minimierungsmethoden}
 
-\subsubsection{Weitere Minimierungsmethoden}
-
-Es stehen noch weitere Minimierungsalgorithmen zur Verfügung, wie beispielsweise die Klasse der Newton-Verfahren.
-Obwohl diese auf dem Papier schneller konvergieren, sind für jeden Iterationsschritt durch die Berechnung der Hesse-Matrix mehr Rechenoperationen notwendig, so dass reale Berechnungszeit und Speicherverbrauch gegenüber CG-Methoden oft im Nachteil sind.
-\todo{Referenz für Interessierte}
+%% Es stehen noch weitere Minimierungsalgorithmen zur Verfügung, wie beispielsweise die Klasse der Newton-Verfahren.
+%% Obwohl diese auf dem Papier schneller konvergieren, sind für jeden Iterationsschritt durch die Berechnung der Hesse-Matrix mehr Rechenoperationen notwendig, so dass reale Berechnungszeit und Speicherverbrauch gegenüber CG-Methoden oft im Nachteil sind.
+%% \todo{Referenz für Interessierte}
 
 \subsection{Kraftfelder}
+\label{mdforcefields}
 
-Basis aller im vorherigen Abschnitt vorgestellten Methoden sind stets Kraftfelder, die die gewünschte Struktur darstellen können.
-Hierfür gibt es eine Vielzahl an verschiedenen Formulierungen, für die es jeweils verschiedene Parametrisierungen gibt, um bestimmte Systeme und Umgebungen zu betrachten.
+Zentrales Element molekulardynamischer Methoden sind Kraftfelder $\vec F(X)$, auch Potentiale $V(X)$ genannt, die die Interaktionen der simulierten Teilchen beschreiben.
+Für verschiedene Materialien existieren spezielle Potentialformulierungen, die für unterschiedliche Elemente wiederum eigene Potentialparametrisierungen in Form von Potentialdateien zur Verfügung stellen.
+Im Folgenden soll eine Auswahl dieser Potentialformulierungen kurz in ihrer Funktionsweise vorgestellt werden.
 
 \subsubsection{Paar-Potentiale}
 
-Das klassische MD-Potential ist das Paarpotential, welches eine Interaktion zwischen zwei benachbarten Atomen modelliert.
-Stellvertretend sind beispielsweise das Lennard-Jones-Potential zur Darstellung von allgemeinen Fluiden (Gleichung \ref{eq:lennardjones}) oder das damit verwandte Bucking\-ham-Potential (Abbildung \ref{fig:mdpairpotentials}.
+Das einfachste MD-Potential ist das Paarpotential, welches eine Interaktion zwischen jeweils zwei benachbarten Atomen modelliert, wodurch sich die Systemgleichungen auf Gleichungen \ref{eq:pairforce} und \ref{eq:pairenergy} reduzieren.
+Stellvertretend steht das Lennard-Jones-Potential zur Darstellung von allgemeinen Fluiden (Gleichung \ref{eq:lennardjones}) oder das damit verwandte Bucking\-ham-Potential (Abbildung \ref{fig:mdpairpotentials}).
+Allen Paar-Potentialen ist gemein, eine rein radiale Abhängigkeit $V(r_ij)$ zu besitzen, die oftmals einen charakteristischen Bindungsabstand in Abhängigkeit der Parameter bildet, welcher sich als Minimum in den Potentialen äußert.
+Unterhalb dieses Radius' dominiert ein repulsiver Term, wo hingegen oberhalb davon ein leicht attraktiver Term vorherrscht, der für große Radien asymptotisch konstant wird und deshalb oft oberhalb eines Cutoff-Radius $r_\text{cut}$ vernachlässigt wird.
 
 \begin{equation}
-  \label{eq:lennardjones}
-  V_{LJ}(r_{ij}) = 4 \epsilon \left[\left(\frac{\sigma}{r_{ij}}\right)^{12} - \left(\frac{\sigma}{r_{ij}}\right)^{6}\right]
-\end{equation}
-\begin{equation}
   \label{eq:pairforce}
-  \vec F_{ij}(\vec r_{ij}) = \vec\nabla V(r_{ij})
+  \vec F_{ij}(r_{ij}) = \vec\nabla V(r_{ij})
 \end{equation}
 \begin{equation}
   \label{eq:pairenergy}
-  E = \sum_i\sum_{j \neq i}{V_{LJ}\left(r_{ij}\right)}
+  E = \sum_i\sum_{j \neq i}{V(r_{ij})}
+\end{equation}
+\begin{equation}
+  \label{eq:lennardjones}
+  V_\text{LJ}(r_{ij}) = 4 \epsilon \left[\left(\frac{\sigma}{r_{ij}}\right)^{12} - \left(\frac{\sigma}{r_{ij}}\right)^{6}\right]
 \end{equation}
 
 \begin{figure}
@@ -169,29 +193,26 @@ Stellvertretend sind beispielsweise das Lennard-Jones-Potential zur Darstellung 
   \label{fig:mdpairpotentials}
 \end{figure}
 
-Andere Potentiale enthalten weitere Parameter oder tabellierte Werte, mit denen spezielle Probleme genauer betrachtet werden können.
-Das allgemeine Problem der Klasse der Paarpotentiale ist ihre Schlichtheit.
-So lassen sie sich schwer an realistische Strukturen fitten und können oftmals nur ein Material in einem Szenario darstellen, wobei sie allerdings schnell sind.
+Zwar zeigen Paarpotentiale gute thermodynamische Eigenschaften bei hoher Effizienz, doch können sie aufgrund ihrer Schlichtheit kein atomistischen Strukturen verlässlich vorhersagen, weshalb die umfangreicheren Mehrteilchen-Potentiale entwickelt wurden.
 
 \subsubsection{N-Teilchen-Potentiale}
 
-N-Teilchen-Potentiale  erweitern Paarpotentiale um weitere Terme, die von einer festen Anzahl an Teilchen abhängen, beispielsweise Winkel- und Torsionsabhängigkeiten.
+N-Teilchen-Potentiale erweitern Paarpotentiale um weitere Terme, die von einer festen Anzahl an Teilchen abhängen, beispielsweise Winkel- und Torsionsabhängigkeiten.
 
 \begin{equation}
   \label{eq:nbody-energy}
-  E = \sum_i\sum_{j \neq i}{V_2\left(r_{ij}\right)} + \sum_i\sum_{j \neq i}\sum_{i \neq k \neq j}{V_3\left(r_{ij}, r_{ik}, \theta_{ijk}\right)}
+  E = \sum_i\sum_{j \neq i}{V_2\left(r_{ij}\right)} + \sum_i\sum_{j \neq i}\sum_{i \neq k \neq j}{V_3\left(r_{ij}, r_{ik}, \theta_{ijk}\right)} + \dots
 \end{equation}
 \todo{letzte Summe: Indizes aufspalten}
 
-Obwohl sich mit N-Teilchen-Potentialen komplexere Systeme betrachten lassen, zeigen sie die gleichen Schwachstellen wie Paarpotentiale.
-Zwar gibt es erfolgreiche \todo{kommerzielle} Anpassungen für Biomoleküle (\todo{CHARMM} \todo{GROMACS} \todo{AMBER}), die allerdings nicht auf andere Stoffsysteme übertragbar sind.
+Obwohl sich mit N-Teilchen-Potentialen komplexere Systeme betrachten lassen, zeigen sie die gleichen Schwachstellen wie Paarpotentiale, benötigen aber eine größere Anzahl an Parametern,
+Zwar gibt es erfolgreiche \todo{kommerzielle} Anwendungen für Biomoleküle (\todo{CHARMM} \todo{GROMACS} \todo{AMBER}), die allerdings aufgrund ihrer Spezialisierung nicht auf andere Stoffsysteme wie Festkörper oder Oberflächen übertragbar sind.
 
 \subsubsection{Embedded Atom Model}
 
-Das Embedded Atom Model (EAM) für jedes Atom $i$ besteht aus einem Paarpotential $V_{\alpha\beta}(r_{ij})$ sowie einer Einbettungsfunktion $F_\alpha$, die die Energie jedes Atomes in Abhängigkeit der angenäherten Elektronendichte $\rho_\beta(r_{ij})$ in der Umgebung modelliert (Gleichung \ref{eq:eam-energy}).\todo{Referenz}
-So lassen sich insbesondere metallische Materialien und Oberflächen simulieren.
-$\alpha$ und $\beta$ stellen dabei verschiedene Atomsorten dar, allerdings lassen sich auch mit dieser umfangreicheren Formulierung hauptsächlich reine Metalle simulieren.
-Für diese findet man allerdings passende Parametrisierungen\todo{Referenz auf Datenbank und passende Paper}, die im Gegensatz zu den meisten Potentialen sowohl thermodynamisches Verhalten als auch Strukturen recht gut modellieren (Abschnitt \ref{goldthermo}).
+Das Embedded Atom Model (EAM) besteht aus einem Paarpotential $V_{\alpha\beta}(r_{ij})$ für jedes Atom $i$ sowie einer Einbettungsfunktion $F_\alpha$, die die Energie des Atomes in Abhängigkeit der angenäherten lokalen Elektronendichte $\rho_\beta(r_{ij})$ modelliert (Gleichung \ref{eq:eam-energy}).\todo{Referenz}
+So lassen sich metallische Bulks und Oberflächen simulieren, für die $\alpha$ und $\beta$ verschiedene Atomsorten darstellen, doch führt die Formulierung für andere Systeme zwangsläufig zur Bildung gleichatomiger Cluster.
+Für eine Vielzahl an Metallen und Legierungen findet man in \todo{wie beispielsweise ASD}Potentialdatenbanken fertige Parametrisierungen\todo{Referenz auf Datenbank und passende Paper}, von denen viele zusätzlich zu den strukturellen Eigenschaften auch thermodynamisches Verhalten recht gut modellieren (Abschnitt \ref{goldthermo}).
 
 \begin{equation}
   \label{eq:eam-energy}
@@ -200,23 +221,20 @@ Für diese findet man allerdings passende Parametrisierungen\todo{Referenz auf D
 
 \subsubsection{Modified Embedded Atom Model}
 
-Um die Einschränkung des reinen EAM-Potentials zu umgehen, wurde das Modified Embedded Atom Model (MEAM) erforscht (Gleichung \ref{eq:meam-energy}). \todo{Referenz auf Baskes}
-Mit diesem lassen sich auch Metalloxide, Legierungen und andere Mischsysteme untersuchen\todo{Referenz}.
-
-\todo{Wie funktioniert es?}
+Als Erweiterung des EAM-Potentials wurden MEAM-Potentiale entwickelt, die neben Metallen und Legierungen auch Metalloxide und andere Mischsysteme ermöglichen sollen. \todo{Referenz auf Baskes}
+Sie basieren auf dem gleichen Grundgedanken, stellen die Einbettungsenergie aber in Abhängigkeit einer umfangreicheren Formulierung der lokalen Elektronendichte dar.
+An dieser Stelle soll neben der oberflächlichen Formel in Gleichung \ref{eq:meam-energy} auf die ursprüngliche Publikation von Baskes \todo[inline]{Ref!} verwiesen werden.
 
 \begin{equation}
   \label{eq:meam-energy}
   E = \sum_i\left[F_\alpha\left(\bar{\rho_i}\right) + \frac{1}{2}\sum_{j\neq i}{V_{ij}\left(r_{ij}\right)}\right]
 \end{equation}
 
-Wie beim EAM-Potential sind die eigentlichen Berechnungen in den einzelnen Funktionen versteckt, die auf umfassende Weise die Elektronendichten zu modellieren versuchen.
-Dafür ist vorher eine umfangreichere Parametrisierung notwendig, die an eine Vielzahl von Strukturen gefittet werden muss.
-
 \subsubsection{Reactive Force Fields}
 
-\todo{Referenz}
-Reactive Force Fields (ReaxFF) wurden mit der Idee erdacht, bisher unmögliche Simulationen in Molekulardynamik mit größeren Systemen darstellen zu können.
+\todo{Referenz auf van Duin}
+todo[inline]{continuehere}
+Reactive Force Fields (ReaxFF) wurden mit der Idee entwickelt, bisher unmögliche Simulationen in Molekulardynamik mit größeren Systemen darstellen zu können.
 Dafür fließt eine Vielzahl an Einflüssen in die Potentialparameter ein, beispielsweise Van-der-Waals-Kräfte und elektrostatische Kräfte, allerdings ist der zentrale Gedanke die Modellierung von Über- und Unterkoordination eines Atomes in seiner Nachbarschaft unter Ladungsaustausch.
 Somit lassen sich Bindungen während der Simulation dynamisch formen und lösen und dadurch ganze Reaktionen zwischen verschiedenen Molekülen simulieren.
 
