--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,5 @@
 \begin{appendix}
+
   \input{appendix_multilayer}
   \input{appendix_silicon}
 
@@ -8,30 +9,15 @@
   %% \chapter{Danksagung}
   %% \newpage
   %\chapter{}
-  \null\vfil
-  \begin{center}
-    %\vspace{-.5em}\vspace{\parsep}
-    %\vspace{0.2cm}
-    \vspace{3cm}
-  \end{center}
-  \par\vfil\null
+  %% \null\vfil
+  %% \begin{center}
+  %%   %\vspace{-.5em}\vspace{\parsep}
+  %%   %\vspace{0.2cm}
+  %%   \vspace{3cm}
+  %% \end{center}
+  %% \par\vfil\null
   %\cleardoubleemptypage
-
-  %======================================================================
-  %  Selbstständigkeitserklärung
-  %======================================================================
-
-  %\addcontentsline{toc}{chapter}{C. Selbständigkeitserklärung}
-  %\chapter{Selbstständigkeitserklärung}
-  %\includepdf[pagecommand={}]{selbststaendigkeitserklaerung.pdf}
-  %\stepcounter{page}
-  %\includepdf{selbststaendigkeitserklaerung.pdf}
-  \cleardoublepage
-  \includepdf[pagecommand={\thispagestyle{plain}}]{selbststaendigkeitserklaerung.pdf}
 
 \end{appendix}
 
 %\part*{Anhang}
-
-%\include{anhanga}
-
