--- a/mdtests.tex
+++ b/mdtests.tex
@@ -1,6 +1,8 @@
 \section{Tests für MD-Potentiale zur Schichtabscheidung}
 \label{mdtests}
 
+\todo[inline]{merge mit mdmethods!}
+
 Vor der Nutzung von Parametrisierungen von Wechselwirkungspotentialen für die Molekulardynamik sollten diese durch eine Reihe von Tests auf ihre Anwendbarkeit geprüft werden.
 Diese Parametrisierungen sind jeweils für einen speziellen Zweck erstellt worden und decken meist nur diesen zuverlässig ab\todo{und manchmal nicht mal das}.
 Das bedeutet einerseits, dass man Potentiale, die auf thermodynamische Probleme optimiert sind, nur selten zur Simulation struktureller Eigenschaften nutzen kann, und umgekehrt.
