--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -109,14 +109,14 @@ Deren Werte variieren für amorphes Silizium stärker als für kristallines, lie
 
 \subsubsection{Stabilität der Precursormoleküle (\ce{SiH4}, \ce{O2})}
 
-\todo[inline]{NVT? Bitte sag, dass kein kanonisches Ensembvle benutzt wurde!}
+\todo[inline]{NVT? Bitte sag, dass kein kanonisches Ensemble benutzt wurde!}
 ReaxFF-Potentiale versprechen die Simulation von Molekülen und deren Reaktion miteinander, die mit den folgenden Tests für Silan und molekularen Sauerstoff überprüft werden sollen.
 Dazu wurden Simulationen einzelner und mehrerer Precursormoleküle (\ce{SiH4} und \ce{O2}) im kanonischen Ensemble bei verschiedenen Temperaturen simuliert und hinsichtlich ihrer Stabilität begutachtet.
 Abbildung \ref{fig:silanestability} zeigt eine Auswahl der Ergebnisse der Silan-Simulationen, an denen sich erkennen lässt, wie instabile Simulationen zur Ablösung der Wasserstoffatome vom Silanmolekül führen.
 
 \subsubsection{Reaktion der Precursormoleküle (\ce{SiH4 + O2})}
 
-\todo[inline]{NVT? Bitte sag, dass kein kanonisches Ensembvle benutzt wurde!}
+\todo[inline]{NVT? Bitte sag, dass kein kanonisches Ensemble benutzt wurde!}
 Reaktionen von einzelnen Precursormolekülen wurden stichprobenartig in verschiedenen Orientierungen, Energien und Temperaturen vorgenommen, um einen Überblick über die Verlässlichkeit zu bekommen.
 Zusätzlich wurden durchmischte Precursorgase mit dem Ziel eventueller Reaktionen simuliert, was jedoch mit keiner der Parametrisierungen zum gewünschten Erfolg bei hoher Zuverlässigkeit führte.
 Einige Parametrisierungen zeigen jedoch vielversprechende Teilreaktionen, die korrekte Doppelbindungen und Bildung von Wasserstoffmolekülen beinhalten (Abbildung \ref{fig:precursorreactions}).
