--- a/contents.tex
+++ b/contents.tex
@@ -58,24 +58,24 @@
 \def\arraystretch{1.5}
 \begin{tabularx}{\linewidth}{lll}
 
-ALD        &   Atomic Layer Deposition                   &       Atomlagenabscheidung                   \\
-AFM        &   Atomic Force Microscopy                   &       Rasterkraftmikroskopie                 \\
-CG         &   Conjugated Gradients                      &       Konjugierte Gradienten                 \\
-CLI        &   Command Line Interface                    &       Kommandozeile                          \\
-CVD        &   Chemical Vapor Deposition                 &       Chemische Gasphasenabscheidung         \\
-DFT        &   Density Functional Theory                 &       Dichtefunktionaltheorie                \\
-EAM        &   Embedded Atom Method                      &       Eingebettete-Atom-Methode              \\
-FEM        &   Finite Element Method                     &       Finite-Elemente-Methoden               \\
-KMC        &   Kinetic Monte Carlo                       &       Kinetische Monte Carlo-Methoden        \\
-MD         &   Molecular Dynamics                        &       Molekulardynamik                       \\
-MEAM       &   Modified Embedded Atom Method             &       Modifizierte Eingebettete-Atom-Methode \\
-MOSFET     &   Metal Oxide Field Effect Transistor       &       Metalloxid-Feldeffekt-Transistor       \\
-MPI        &   Message Passing Interface                 &       eine Kommunikationsschnittstelle       \\
-PVD        &   Physical Vapor Deposition                 &       Physikalische Gasphasenabscheidung     \\
-RDF        &   Radial Distribution Function              &       Radiale Verteilungsfunktion            \\
-ReaxFF     &   Reactive Force Fields                     &       Reaktive Kraftfelder                   \\
-RMS        &   Root Mean Square                          &       Standardabweichung                     \\
-TMA        &   Trimethylaluminum (\ce{Al(CH3)3})         &       Trimethylaluminium (\ce{Al(CH3)3})     \\
+ALD    & Atomic Layer Deposition             & Atomlagenabscheidung                   \\
+AFM    & Atomic Force Microscopy             & Rasterkraftmikroskopie                 \\
+CG     & Conjugated Gradients                & Konjugierte Gradienten                 \\
+CLI    & Command Line Interface              & Kommandozeile                          \\
+CVD    & Chemical Vapor Deposition           & Chemische Gasphasenabscheidung         \\
+DFT    & Density Functional Theory           & Dichtefunktionaltheorie                \\
+EAM    & Embedded Atom Method                & Eingebettete-Atom-Methode              \\
+FEM    & Finite Element Method               & Finite-Elemente-Methoden               \\
+KMC    & Kinetic Monte Carlo                 & Kinetische Monte Carlo-Methoden        \\
+MD     & Molecular Dynamics                  & Molekulardynamik                       \\
+MEAM   & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom-Methode \\
+MOSFET & Metal Oxide Field Effect Transistor & Metalloxid-Feldeffekt-Transistor       \\
+MPI    & Message Passing Interface           & eine Kommunikationsschnittstelle       \\
+PVD    & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung     \\
+RDF    & Radial Distribution Function        & Radiale Verteilungsfunktion            \\
+ReaxFF & Reactive Force Fields               & Reaktive Kraftfelder                   \\
+RMS    & Root Mean Square                    & Standardabweichung                     \\
+TMA    & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})     \\
 
 NPT        &   \multicolumn{2}{X}{Großkanonisches Ensemble: Teilchenzahl, Druck und Temperatur sind konstant}   \\
 NVT        &   \multicolumn{2}{X}{Kanonisches Ensemble: Teilchenzahl, Volumen und Temperatur sind konstant}     \\
@@ -97,9 +97,10 @@ Parsivald  &   \multicolumn{2}{X}{Parallel Atomistic Reaction Simulator for Vapo
 \def\listacronymname{Symbolverzeichnis}
 
 \begin{tabularx}{\linewidth}{ll}
-$E_\text{A}$        &  Aktivierungsenergie \\
-$p_\text{partial}$  &  Partialdruck \\
-$A_S^D$ & asd \\
+$E_\text{A}$       & Aktivierungsenergie            \\
+$p_\text{partial}$ & Partialdruck                   \\
+$\tau$             & Dämpfungszeit des Thermostates \\
+$A_S^D$            & asd                            \\
 \end{tabularx}
 
 %\printglosstex(acr)
